zishao-v410-check-fix-1

--- a/en-US/1.learn-more-about-oceanbase/3.system-architecture.md
+++ b/en-US/1.learn-more-about-oceanbase/3.system-architecture.md
@@ -102,7 +102,7 @@ ODP is independent of the OceanBase Database instance and runs as an independent
 
 ODP automatically discovers the data distribution information of an OceanBase cluster. It tries to identify the data to be accessed when it receives each SQL statement, and directly forwards the statement to the OceanBase Database instance of the server where the data exists.
 
-ODP can be deployed on each application server that needs to access OceanBase Database, or on an OBServer in each zone. In the first deployment mode, an application directly connects to the ODP deployed on the same server, and all queries are routed by the OBProxy to an appropriate OBServer. In the second deployment mode, a load balancing service is required to aggregate multiple ODPs and provide a unified service IP address to applications.
+ODP can be deployed on each application server that needs to access OceanBase Database, or on an OBServer in each zone. In the first deployment mode, an application directly connects to the ODP deployed on the same server, and all queries are routed by the ODP to an appropriate OBServer. In the second deployment mode, a load balancing service is required to aggregate multiple ODPs and provide a unified service IP address to applications.
 
 <!-- ## More information
 
