--- a/en-US/6.manage/6.backup-and-recovery/3.log-archive/1.overview-of-log-archive.md
+++ b/en-US/6.manage/6.backup-and-recovery/3.log-archive/1.overview-of-log-archive.md
@@ -7,11 +7,11 @@ This topic describes the concepts and internal logic of log archiving.
 
 Log archiving is a process of storing the redo logs generated in the database to other media such as Network File System (NFS) and Object Storage Service (OSS) so that the redo operation history of the database can be stored for a longer period. OceanBase Database uses a multi-tenancy architecture. You can separately enable log archiving for each tenant. Log archiving operations in different tenants are independent of each other.
 
-In addition, OceanBase Database is a native distributed database. Therefore, archiving operations for different log streams within a tenant are also independent of each other. The leader of a log stream is responsible for log archiving. Each log stream is archived only once. During archiving, the leader of RootService calculates the archiving progress of the current tenant based on the archiving progress of each log stream.
+In addition, OceanBase Database is a native distributed database. Therefore, archiving operations for different log streams within a tenant are also independent of each other. The leader of a log stream is responsible for log archiving. Each log stream is archived only once. During archiving, the leader of Root Service calculates the archiving progress of the current tenant based on the archiving progress of each log stream.
 
-The following figure shows the log archiving architecture.
+<!-- The following figure shows the log archiving architecture.
 
-![Log archiving architecture](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/user-guide/log-archive-architecture.png)
+![Log archiving architecture](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/user-guide/log-archive-architecture.png) -->
 
 ## Log archiving state machine
 
