--- a/zh-CN/7.reference/3.performance-tuning-guide/5.sql-optimization/4.sql-optimization/4.optimizer-statistics/2.statistics-collection-methods/5.online-statistics-collection.md
+++ b/zh-CN/7.reference/3.performance-tuning-guide/5.sql-optimization/4.sql-optimization/4.optimizer-statistics/2.statistics-collection-methods/5.online-statistics-collection.md
@@ -25,10 +25,15 @@ OceanBase 数据库使用 `GATHER_OPTIMIZER_STATISTICS`/`NO_GATHER_OPTIMIZER_STA
   示例如下：
 
   ```sql
-  INSERT /*+GATHER_OPTIMIZER_STATISTICS*/ INTO table_name VALUES()...
+  
   INSERT /*+GATHER_OPTIMIZER_STATISTICS*/ INTO table_name SELECT * FROM table_name
-  INSERT /*+GATHER_OPTIMIZER_STATISTICS*/ INTO table_name(column_name) VALUES() | SELECT...
+  
   ```
+  <main id="notice" type='notice'>
+  <h4>注意</h4>
+  <p>OceanBase 数据库暂不支持通过 <code>INSERT /*+GATHER_OPTIMIZER_STATISTICS*/ INTO table_name VALUES()...</code> 和 <code>INSERT /*+GATHER_OPTIMIZER_STATISTICS*/ INTO table_name(column_name) VALUES() | SELECT...</code> 语句在线收集统计信息。</p>
+  
+</main>
 
 - PDML
 
